<?xml version="1.0"?>
<package format="2">
  <name>sadem_slam</name>
  <version>0.0.0</version>
  <description>The sadem_slam package</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>


  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
